--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -9,44 +9,61 @@
 <!--navigation bar-->
 <nav th:replace="layouts :: navbar"></nav>
 
-
-<div>
+<div class="container">
+    <h3>Main Dashboard</h3>
+    <hr/>
     <h4>Current projects</h4>
-    <table>
-        <thead>
-        <tr>
-            <th>Project Name</th>
-            <th>Project Stage</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="project : ${projects}">
-            <td th:text="${project.name}"/>
-            <td th:text="${project.stage}"/>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Project Name</th>
+                    <th>Project Stage</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="project : ${projects}">
+                    <td th:text="${project.name}"/>
+                    <td th:text="${project.stage}"/>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <canvas id="myPieChart" height="50" width="50"/>
+        </div>
+    </div> <!-- row ends here -->
 </div>
 
-<div>
+
+<div class="container">
     <h4>Current Employees</h4>
-    <table>
-        <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="employee : ${employees}">
-            <td th:text="${employee.firstName}"/>
-            <td th:text="${employee.LastName}"/>
-            <td th:text="${employee.email}"/>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="employee : ${employees}">
+                    <td th:text="${employee.firstName}"/>
+                    <td th:text="${employee.LastName}"/>
+                    <td th:text="${employee.email}"/>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>  <!-- row ends here -->
 </div>
 
+</div>
+<!-- end container-->
+
+<script type="text/javascript" th:src="@{js/myChart.js}"></script>
 </body>
 </html>
