--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -32,6 +32,9 @@
         </div>
         <div class="col-md-4">
             <canvas id="myPieChart" height="50" width="50"/>
+            <script>
+                var chartData = "[[${projectStatusCount}]]"
+            </script>
         </div>
     </div> <!-- row ends here -->
 </div>
@@ -46,14 +49,14 @@
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Email</th>
+                    <th>Project Count</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="employee : ${employees}">
-                    <td th:text="${employee.firstName}"/>
-                    <td th:text="${employee.LastName}"/>
-                    <td th:text="${employee.email}"/>
+                <tr th:each="employeeProject : ${employeeProjects}">
+                    <td th:text="${employeeProject.firstName}"/>
+                    <td th:text="${employeeProject.LastName}"/>
+                    <td th:text="${employeeProject.projectCount}"/>
                 </tr>
                 </tbody>
             </table>
