--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -30,6 +30,8 @@
 
         </select>
 
+        <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+
         <button type="submit">Create Project</button>
 
     </form>
